--- a/src/pages/projects/[...page].astro
+++ b/src/pages/projects/[...page].astro
@@ -1,10 +1,10 @@
 ---
 import type { GetStaticPathsOptions, Page } from 'astro';
 import { type CollectionEntry, getCollection } from 'astro:content';
-import BaseLayout from '../../layouts/BaseLayout.astro';
 import Pagination from '../../components/Pagination.astro';
 import ProjectPreview from '../../components/ProjectPreview.astro';
 import siteConfig from '../../data/site-config';
+import BaseLayout from '../../layouts/BaseLayout.astro';
 import { sortItemsByDateDesc } from '../../utils/data-utils';
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
@@ -22,7 +22,7 @@ const portfolio = page.data;
     title="Portfolio"
     description="Explore a diverse portfolio showcasing my passion and expertise"
     image={{ src: '/dante-preview.jpg', alt: 'The preview of the site' }}
-    showHeader={false}
+    showHeader={true}
 >
     <h1 class="mb-12 text-2xl leading-tight font-serif italic sm:mb-16 sm:text-4xl">Projects</h1>
     {portfolio.map((project) => <ProjectPreview project={project} class="mb-10 sm:mb-12" />)}
