Changed image management from public to assets folder and Image component usage.

--- a/src/components/Figure.astro
+++ b/src/components/Figure.astro
@@ -1,4 +1,5 @@
 ---
+import { Image } from 'astro:assets';
 const { src, alt, srcDark } = Astro.props;
 ---
 
@@ -6,8 +7,8 @@ const { src, alt, srcDark } = Astro.props;
     <figcaption class="hidden md:block md:mr-[-53%] md:float-right md:clear-end md:w-[53%] px-6">
         <slot />
     </figcaption>
-    <img src={src} alt={alt} class="w-full h-auto py-0 block dark:hidden" />
-    {srcDark && <img src={srcDark} alt={alt} class="w-full h-auto py-0 hidden dark:block" />}
+    <Image src={src} alt={alt} class="w-full h-auto py-0 block dark:hidden" />
+    {srcDark && <Image src={srcDark} alt={alt} class="w-full h-auto py-0 hidden dark:block" />}
     <figcaption class="block md:hidden px-6 my-4">
         <slot />
     </figcaption>
