--- a/src/components/MarginFigure.astro
+++ b/src/components/MarginFigure.astro
@@ -1,11 +1,11 @@
 ---
-// filepath: /Users/zwerg/Coding/astro/dante/src/components/MarginFigure.astro
+import { Image } from 'astro:assets';
 const { src, srcDark, alt } = Astro.props;
 ---
 
 <figure class="m-0 md:mr-[-53%] md:float-right md:clear-end md:w-[53%] px-6">
-    <img src={src} alt={alt} class="w-full h-auto py-0 block dark:hidden" />
-    {srcDark && <img src={srcDark} alt={alt} class="w-full h-auto py-0 hidden dark:block" />}
+    <Image src={src} alt={alt} class="w-full h-auto py-0 block dark:hidden" />
+    {srcDark && <Image src={srcDark} alt={alt} class="w-full h-auto py-0 hidden dark:block" />}
     <figcaption class="block px-6 md:px-0 my-4">
         <slot />
     </figcaption>
