--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -136,6 +136,12 @@ html.dark {
 
 }   
 
-.katex {
+
+.prose .katex {
 	    font-size: 1em;
 }
+
+.katex-display .katex {
+	    font-size: 1.0em;
+}
+
