--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,6 +1,5 @@
 ---
 import NavLink from './NavLink.astro';
-import ThemeToggle from './ThemeToggle.astro';
 import siteConfig from '../data/site-config';
 import { Image } from 'astro:assets';
 
@@ -38,7 +37,7 @@ const navLinks = siteConfig.headerNavLinks || [];
         )
     }
     <div class="absolute right-20 top-4 z-10 md:top-8">
-        <ThemeToggle />
+        {/* <ThemeToggle /> */}
     </div>
     <div class="absolute right-0 top-3 z-10 md:top-7">
         <a href="/">
