--- a/src/components/TutorialPreview.astro
+++ b/src/components/TutorialPreview.astro
@@ -2,14 +2,14 @@
 import { type CollectionEntry } from 'astro:content';
 import ArrowRight from '../icons/ArrowRight.astro';
 
-type Props = { project: CollectionEntry<'projects'>; class?: string; headingLevel?: 'h2' | 'h3' };
+type Props = { tutorial: CollectionEntry<'tutorials'>; class?: string; headingLevel?: 'h2' | 'h3' };
 
-const { project, class: className, headingLevel = 'h2' } = Astro.props;
-const { title, description } = project.data;
+const { tutorial, class: className, headingLevel = 'h2' } = Astro.props;
+const { title, description } = tutorial.data;
 const TitleTag = headingLevel;
 ---
 
-<a class:list={['flex justify-between items-start gap-8 group', className]} href={`/projects/${project.id}/`}>
+<a class:list={['flex justify-between items-start gap-8 group', className]} href={`/tutorials/${tutorial.id}/`}>
     <div class="grow">
         <TitleTag
             class="text-xl leading-tight font-serif font-medium group-hover:underline group-hover:decoration-dashed group-hover:underline-offset-4 group-hover:decoration-1 sm:text-2xl"
@@ -19,6 +19,6 @@ const TitleTag = headingLevel;
         {description && <div class="mt-1 text-lg leading-normal font-serif">{description}</div>}
     </div>
     <div class="hidden font-serif italic opacity-0 transition group-hover:opacity-100 sm:inline-flex sm:gap-1 sm:items-center sm:shrink-0">
-        View Project <ArrowRight class="fill-current w-4 h-4" />
+        View Tutorial <ArrowRight class="fill-current w-4 h-4" />
     </div>
 </a>
