--- a/src/components/Figure.astro
+++ b/src/components/Figure.astro
@@ -4,7 +4,7 @@ import { Image } from 'astro:assets';
 const { src, alt, srcDark, margin = false } = Astro.props;
 ---
 
-<figure class={margin ? 'm-0 md:mr-[-53%] md:float-right md:clear-end md:w-[53%] px-6' : 'm-0 not-prose'}>
+<figure class={margin ? 'm-0 md:mr-[-53%] md:float-right md:clear-end md:w-[53%] px-6' : 'm-0'}>
     {
         !margin && (
             <figcaption class="hidden md:block md:mr-[-53%] md:float-right md:clear-end md:w-[53%] px-6">
@@ -13,12 +13,10 @@ const { src, alt, srcDark, margin = false } = Astro.props;
         )
     }
 
-<Image src={src} alt={alt} class="w-full h-auto py-0 block dark:hidden" />
+    <Image src={src} alt={alt} class="w-full h-auto py-0 block dark:hidden" />
     {srcDark && <Image src={srcDark} alt={alt} class="w-full h-auto py-0 hidden dark:block" />}
-
 
     <figcaption class={margin ? 'block px-6 md:px-0 my-4' : 'block md:hidden px-6 my-4'}>
         <slot />
     </figcaption>
-
 </figure>
