--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,6 @@
 ---
 import siteConfig from '../data/site-config';
+import Link from './Link.astro';
 
 const socialLinks = siteConfig.socialLinks || [];
 const navLinks = siteConfig.footerNavLinks || [];
@@ -10,9 +11,9 @@ const navLinks = siteConfig.footerNavLinks || [];
         navLinks.length > 0 && (
             <div class="mb-4 flex flex-wrap gap-x-6 gap-y-1">
                 {navLinks.map((link) => (
-                    <a class="font-serif hover:underline hover:underline-offset-2" href={link.href}>
+                    <Link class="font-serif hover:underline hover:underline-offset-2" href={link.href}>
                         {link.text}
-                    </a>
+                    </Link>
                 ))}
             </div>
         )
@@ -27,14 +28,14 @@ const navLinks = siteConfig.footerNavLinks || [];
             socialLinks.length > 0 && (
                 <div class="flex flex-wrap gap-x-4 gap-y-1">
                     {socialLinks.map((link) => (
-                        <a
+                        <Link
                             class="inline-flex items-center justify-center text-sm hover:underline hover:underline-offset-2"
                             href={link.href}
                             target="_blank"
                             rel="noopener noreferer"
                         >
                             {link.text}
-                        </a>
+                        </Link>
                     ))}
                 </div>
             )
