--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 ---
-import NavLink from './NavLink.astro';
+import NavLink from './Link.astro';
 import siteConfig from '../data/site-config';
 import { Image } from 'astro:assets';
 
@@ -9,7 +9,7 @@ const navLinks = siteConfig.headerNavLinks || [];
 <nav class="min-h-10 pt-4 pb-12 relative sm:min-h-14 sm:pb-24 md:pt-8">
     {
         navLinks.length > 0 && (
-            <div class="w-full max-w-6xl mx-auto relative">
+            <div class="w-full max-w-5xl mx-auto relative">
                 <button
                     class="menu-toggle cursor-pointer w-8 h-8 -ml-1 flex items-center justify-center relative z-30 md:hidden"
                     aria-label="Open Menu"
@@ -39,8 +39,8 @@ const navLinks = siteConfig.headerNavLinks || [];
 
     <div class="absolute right-0 top-3 z-10 md:top-8">
         <a href="/">
-            <img src={siteConfig.logo.src.src} alt={siteConfig.logo.alt || ''} class="max-h-12 block dark:hidden" />
-            <img src={siteConfig.logoDark.src.src} alt={siteConfig.logoDark.alt || ''} class="max-h-12 hidden dark:block" />
+            <img src={siteConfig.logo.src} alt={siteConfig.logo.alt || ''} class="max-h-12 block dark:hidden" />
+            <img src={siteConfig.logoDark.src} alt={siteConfig.logoDark.alt || ''} class="max-h-12 hidden dark:block" />
         </a>
     </div>
 </nav>
