--- a/src/components/TutorialPreview.astro
+++ b/src/components/TutorialPreview.astro
@@ -1,5 +1,6 @@
 ---
 import { type CollectionEntry } from 'astro:content';
+import Link from '../components/Link.astro';
 import ArrowRight from '../icons/ArrowRight.astro';
 
 type Props = { tutorial: CollectionEntry<'tutorials'>; class?: string; headingLevel?: 'h2' | 'h3' };
@@ -9,7 +10,7 @@ const { title, description } = tutorial.data;
 const TitleTag = headingLevel;
 ---
 
-<a class:list={['flex justify-between items-start gap-8 group', className]} href={`/tutorials/${tutorial.id}/`}>
+<Link class:list={['flex justify-between items-start gap-8 group', className]} href={`/tutorials/${tutorial.id}/`}>
     <div class="grow">
         <TitleTag
             class="text-xl leading-tight font-serif font-medium group-hover:underline group-hover:decoration-dashed group-hover:underline-offset-4 group-hover:decoration-1 sm:text-2xl"
@@ -21,4 +22,4 @@ const TitleTag = headingLevel;
     <div class="hidden font-serif italic opacity-0 transition group-hover:opacity-100 sm:inline-flex sm:gap-1 sm:items-center sm:shrink-0">
         View Tutorial <ArrowRight class="fill-current w-4 h-4" />
     </div>
-</a>
+</Link>
