--- a/src/layouts/ListLayout.astro
+++ b/src/layouts/ListLayout.astro
@@ -14,8 +14,11 @@ const showHeader = Astro.props.showHeader ?? Astro.props.frontmatter?.showHeader
         <header class="mb-8">
             <h1 class="text-3xl leading-tight font-serif font-medium sm:text-5xl sm:leading-tight">{seo?.title ?? title}</h1>
         </header>
-        <div class="max-w-none prose sm:prose-lg">
-            <slot />
-        </div>
+        <section class="max-w-none prose sm:prose-lg wide">
+            <slot name="preamble" />
+        </section>
+        <section>
+            <slot name="list" />
+        </section>
     </article>
 </BaseLayout>
