--- a/src/pages/tutorials/index.astro
+++ b/src/pages/tutorials/index.astro
@@ -1,19 +1,29 @@
 ---
-import { getCollection } from 'astro:content';
+import { getCollection, getEntry, render } from 'astro:content';
+import Link from '../../components/Link.astro';
 import TutorialPreview from '../../components/TutorialPreview.astro';
-import BaseLayout from '../../layouts/BaseLayout.astro';
+import ListLayout from '../../layouts/ListLayout.astro';
 import { sortItemsByDateDesc } from '../../utils/data-utils';
 
-const notes = (await getCollection('tutorials')).sort(sortItemsByDateDesc);
-const portfolio = notes; // Use the entire collection
+const tutorials = (await getCollection('tutorials')).sort(sortItemsByDateDesc);
+const preamble = await getEntry('pages', 'tutorial-index');
+const { title, seo, image, showHeader } = preamble.data;
+const { Content } = await render(preamble);
 ---
 
-<BaseLayout
-    title="Notes"
-    description="Explore a diverse portfolio showcasing my passion and expertise"
-    image={{ src: '/dante-preview.jpg', alt: 'The preview of the site' }}
-    showHeader={true}
->
-    <h1 class="mb-12 text-2xl leading-tight font-serif italic sm:mb-16 sm:text-4xl">Tutorials</h1>
-    {portfolio.map((tutorial) => <TutorialPreview tutorial={tutorial} class="mb-10 sm:mb-12" />)}
-</BaseLayout>
+<!-- <BaseLayout title="Tutorials" description="Tutorials on diverse topics relevant for the Introduction to Complex systems Course." showHeader={true}>
+    
+    <Content components={{ a: 'Link' }} />
+
+    <h1 class="mb-12 text-2xl leading-tight font-serif italic sm:mb-16 sm:text-4xl">List of Tutorials:</h1>
+
+    {tutorials.map((tutorial) => <TutorialPreview tutorial={tutorial} class="mb-10 sm:mb-12" />)}
+</BaseLayout> -->
+<ListLayout title={title} seo={seo} image={image} showHeader={showHeader}>
+    <div slot="preamble">
+        <Content components={{ a: Link }} />
+    </div>
+    <div slot="list">
+        {tutorials.map((tutorial) => <TutorialPreview tutorial={tutorial} class="mb-10 sm:mb-12" />)}
+    </div>
+</ListLayout>
