--- a/src/pages/[...id].astro
+++ b/src/pages/[...id].astro
@@ -6,7 +6,7 @@ import PageLayout from '../layouts/PageLayout.astro';
 export async function getStaticPaths() {
     const pages = await getCollection('pages');
     return pages.map((page) => {
-        const segments = page.id === 'index' ? '' : page.id;
+        const segments = page.id === 'index' ? undefined : page.id;
         return {
             params: { id: segments },
             props: { page }
